--- a/build.gradle
+++ b/build.gradle
@@ -10,8 +10,11 @@ repositories {
 }
 
 dependencies {
-    testImplementation platform('org.junit:junit-bom:5.10.0')
-    testImplementation 'org.junit.jupiter:junit-jupiter'
+    implementation 'org.apache.zookeeper:zookeeper:3.6.3'
+    implementation 'org.apache.kafka:kafka-clients:3.6.0'
+
+  //  testImplementation platform('org.junit:junit-bom:5.10.0')
+   // testImplementation 'org.junit.jupiter:junit-jupiter'
 }
 
 test {
