--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'com.github.johnrengelman.shadow' version '8.1.1'
 }
 
 group = 'org.ksu'
@@ -13,10 +14,20 @@ dependencies {
     implementation 'org.apache.zookeeper:zookeeper:3.6.3'
     implementation 'org.apache.kafka:kafka-clients:3.6.0'
 
-  //  testImplementation platform('org.junit:junit-bom:5.10.0')
-   // testImplementation 'org.junit.jupiter:junit-jupiter'
+    // testImplementation platform('org.junit:junit-bom:5.10.0')
+    // testImplementation 'org.junit.jupiter:junit-jupiter'
 }
 
-test {
-    useJUnitPlatform()
+jar {
+    manifest {
+        attributes(
+                'Main-Class': 'org.ksu.DoorMonitoringApp' // Update to your main class and use ./gradlew clean shadowJar
+
+        )
+    }
+}
+
+// Task to create a fat JAR
+shadowJar {
+    archiveClassifier.set('')
 }
